[metadata]
name = sleeb
version = 0.0.1
author = Remington Mallett
author_email = mallett.remy@gmail.com
description = BIDS pipelines for sleep data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/remrama/sleeb
project_urls =
    Bug Tracker = https://github.com/remrama/sleeb/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = sleeb
packages = find:
python_requires = >=3.6

[options.packages.find]
where = sleeb